changed my background color

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background-color: red;
+	background-color: #69969C;
 }
 /* changes the background color to orange when the screen is 320 px wide */
 @media(max-width: 320px){
