--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-color: pink;
+    background-image: url("http://www.fads.co.uk/assets/images/cached/img/1000x750/f6b8e1e31f48754f5ddff67a02e10e4a/product/flourish-white--silver-floral-wallpaper_1320247324.jpg");
 }
 #header{
     background-color: #103D50;
@@ -74,53 +74,58 @@ ul.social-icons li a{
     color: white;
 }
 #section{
-    height:800px;
+    height:1100px;
     background-image: url("http://www.fads.co.uk/assets/images/cached/img/1000x750/f6b8e1e31f48754f5ddff67a02e10e4a/product/flourish-white--silver-floral-wallpaper_1320247324.jpg");
 }
 #div1{
     margin-top: 20px;
     background-color: #103D50;
-    height: 300px;
+    height: 330px;
     display: inline-block;
-    float: left;
-    width: 700px;
-    margin-left: 50px;
+    float: right;
+    width: 500px;
+    padding-left: 50px;
     font-family: 'Rozha One', serif;
     font-size: 17px;
     color: white;
     border-radius: 15px;
-    padding: 30px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
+    margin-right: 100px;
 }
 #div2{
     margin-top: 20px;
     background-color: #103D50;
-    height: 300px;
+    height: 340px;
     width: 500px;
     display: inline-block;
-    margin-left: 50px;
+    margin-left: 220px;
     color: white;
     border-radius: 15px;
+    float: left;
+    vertical-align: top;
+    margin-right: 50px;
+    padding-bottom: 20px;
 }
 #article{
-    height: 200px;
+    height: 190px;
     width: 300px;
     margin-left: 100px;
-    border: 3px solid white;
     font-family: 'Rozha One', serif;
 }
 #div3{
     margin-top: 20px;
     background-color: #103D50;
-    height: 300px;
+    height: 330px;
     display: inline-block;
     float: left;
-    width: 700px;
+    width: 500px;
     margin-left: 50px;
     font-family: 'Rozha One', serif;
     font-size: 17px;
     color: white;
     border-radius: 15px;
     padding: 30px 20px 20px 20px;
+    vertical-align: top;
 }
 #div4{
     display: inline-block;
@@ -128,11 +133,12 @@ ul.social-icons li a{
     width: 500px;
     background-color: #103D50; 
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 220px;
     margin-bottom: 50px;
     font-family: 'Rozha One', serif;
     color: white;
     border-radius: 15px;
+    float: left;
 }
 #footer{
     height: 100px;
@@ -145,12 +151,16 @@ ul.social-icons li a{
     color: white
 }
 #div5{
-    height: 2px;
     background-color: grey;
     width: 200px;
-    margin-bottom: 10px;
+    height: 2px;
+    margin-bottom: 5px;
     opacity: .8;
     margin-left: 150px;
+    float: left;
+    margin-right: 50px;
+    margin-bottom: 10px;
+   
 }
 @media(max-width: 320px){
     body{
@@ -166,10 +176,28 @@ ul.social-icons li a{
     height: 500px;
 }
 a {
-    color: white;
+    color: grey;
     text-decoration: none;
     font-size: 30px;
 }
 a:hover {
     color: grey;
+}
+#post{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+#post{
+    height: 500px;
+    width: 500px;
+    background: #103D50;
+    color: white;
+    display: inline-block;
+    font-family: 'Rozha One', serif;
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    text-align: center;
 }
